--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,120 +1,127 @@
 version: '3.8'
 
 services:
-  # MongoDB - Base de datos
-  mongodb:
-    image: mongo:latest
-    container_name: practica-mongodb
+  # Cassandra - Base de datos
+  cassandra:
+    image: cassandra:4.1
+    container_name: practica-cassandra
     ports:
-      - "27017:27017"
+      - "9042:9042"
+    environment:
+      - CASSANDRA_CLUSTER_NAME=prediction-cluster
+      - CASSANDRA_DC=dc1
+      - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
     volumes:
-      - mongodb_data:/data/db
+      - cassandra_data:/var/lib/cassandra
     networks:
       - prediction-network
     healthcheck:
-      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      test: ["CMD-SHELL", "cqlsh -e 'describe cluster' || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 10
+      start_period: 60s
 
   # Kafka - Sistema de mensajería
   kafka:
-    image: bitnami/kafka:latest
+    image: confluentinc/cp-kafka:7.5.0
     container_name: practica-kafka
     ports:
       - "9092:9092"
     environment:
-      # KRaft mode configuration
-      KAFKA_CFG_NODE_ID: 0
-      KAFKA_CFG_PROCESS_ROLES: controller,broker
-      KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: 0@kafka:9093
-      KAFKA_CFG_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093
-      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
-      KAFKA_CFG_CONTROLLER_LISTENER_NAMES: CONTROLLER
-      KAFKA_CFG_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      # Topic auto-creation
-      KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE: "true"
-      # Log settings
-      KAFKA_CFG_LOG_DIRS: /bitnami/kafka/data
+      KAFKA_NODE_ID: 1
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_PROCESS_ROLES: broker,controller
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka:9093
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092,CONTROLLER://0.0.0.0:9093
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      CLUSTER_ID: MkU3OEVBNTcwNTJENDM2Qk
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+      KAFKA_LOG_DIRS: /var/lib/kafka/data
     volumes:
-      - kafka_data:/bitnami/kafka
+      - kafka_data:/var/lib/kafka/data
     networks:
       - prediction-network
     healthcheck:
-      test: ["CMD-SHELL", "kafka-topics.sh --bootstrap-server localhost:9092 --list"]
+      test: ["CMD", "kafka-broker-api-versions", "--bootstrap-server", "localhost:9092"]
       interval: 10s
       timeout: 10s
-      retries: 5
+      retries: 10
+      start_period: 20s
 
   # Spark Master - Coordinador de Spark
   spark-master:
-    image: bitnami/spark:3.5.3
+    image: apache/spark:3.5.0
     container_name: practica-spark-master
+    command: /opt/spark/bin/spark-class org.apache.spark.deploy.master.Master
     environment:
       - SPARK_MODE=master
-      - SPARK_RPC_AUTHENTICATION_ENABLED=no
-      - SPARK_RPC_ENCRYPTION_ENABLED=no
-      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-      - SPARK_SSL_ENABLED=no
+      - SPARK_MASTER_HOST=spark-master
+      - SPARK_MASTER_PORT=7077
+      - SPARK_MASTER_WEBUI_PORT=8080
     ports:
-      - "8080:8080"
+      - "8081:8080"
       - "7077:7077"
     networks:
       - prediction-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080"]
+      test: ["CMD-SHELL", "test -f /proc/net/tcp"]
       interval: 10s
       timeout: 5s
       retries: 5
+      start_period: 10s
 
   # Spark Worker 1 - Worker de procesamiento
   spark-worker-1:
-    build:
-      context: .
-      dockerfile: Dockerfile.spark
+    image: apache/spark:3.5.0
     container_name: practica-spark-worker-1
+    command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
     depends_on:
       spark-master:
         condition: service_healthy
-      kafka:
-        condition: service_healthy
-      mongodb:
-        condition: service_healthy
     environment:
-      - SPARK_MODE=worker
-      - SPARK_MASTER_URL=spark://spark-master:7077
-      - SPARK_WORKER_MEMORY=2G
       - SPARK_WORKER_CORES=2
-      - SPARK_RPC_AUTHENTICATION_ENABLED=no
-      - SPARK_RPC_ENCRYPTION_ENABLED=no
-      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-      - SPARK_SSL_ENABLED=no
+      - SPARK_WORKER_MEMORY=2G
     networks:
       - prediction-network
 
   # Spark Worker 2 - Worker de procesamiento (redundancia)
   spark-worker-2:
+    image: apache/spark:3.5.0
+    container_name: practica-spark-worker-2
+    command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
+    depends_on:
+      spark-master:
+        condition: service_healthy
+    environment:
+      - SPARK_WORKER_CORES=2
+      - SPARK_WORKER_MEMORY=2G
+    networks:
+      - prediction-network
+
+  # Spark Job - Ejecuta el job de predicción
+  spark-job:
     build:
       context: .
       dockerfile: Dockerfile.spark
-    container_name: practica-spark-worker-2
+    container_name: practica-spark-job
+    command: /opt/spark-apps/docker-entrypoint-spark.sh
     depends_on:
       spark-master:
         condition: service_healthy
       kafka:
         condition: service_healthy
-      mongodb:
+      cassandra:
         condition: service_healthy
+      spark-worker-1:
+        condition: service_started
+      spark-worker-2:
+        condition: service_started
     environment:
-      - SPARK_MODE=worker
-      - SPARK_MASTER_URL=spark://spark-master:7077
-      - SPARK_WORKER_MEMORY=2G
-      - SPARK_WORKER_CORES=2
-      - SPARK_RPC_AUTHENTICATION_ENABLED=no
-      - SPARK_RPC_ENCRYPTION_ENABLED=no
-      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-      - SPARK_SSL_ENABLED=no
+      - SPARK_MASTER=spark://spark-master:7077
     networks:
       - prediction-network
 
@@ -125,7 +132,7 @@ services:
       dockerfile: Dockerfile.flask
     container_name: practica-flask
     depends_on:
-      mongodb:
+      cassandra:
         condition: service_healthy
       kafka:
         condition: service_healthy
@@ -147,5 +154,5 @@ networks:
     driver: bridge
 
 volumes:
-  mongodb_data:
+  cassandra_data:
   kafka_data:
