--- a/docker/flask/Dockerfile
+++ b/docker/flask/Dockerfile
@@ -3,6 +3,7 @@ FROM python:3.10-slim
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 ENV PROJECT_HOME=/app
+ENV CASS_DRIVER_NO_CYTHON=1
 
 WORKDIR /app
 
