--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,18 @@ services:
     ports:
       - "9042:9042"
     environment:
-      MAX_HEAP_SIZE: 1G
-      HEAP_NEWSIZE: 200M
+      MAX_HEAP_SIZE: 512M
+      HEAP_NEWSIZE: 128M
+      CASSANDRA_MEMTABLE_HEAP_SPACE_IN_MB: 256
+      CASSANDRA_MEMTABLE_OFFHEAP_SPACE_IN_MB: 256
     volumes:
       - ./data/cassandra:/var/lib/cassandra
+    deploy:
+      resources:
+        limits:
+          memory: 1G
+        reservations:
+          memory: 512M
     healthcheck:
       test: ["CMD-SHELL", "cqlsh -e 'SHOW VERSION' localhost 9042"]
       interval: 20s
